--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
-    <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema</url>
+    <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
         <junit.version>5.8.2</junit.version>
-        <jacoco.version>0.8.7</jacoco.version>
+        <jacoco.version>0.8.8</jacoco.version>
         <gpg.skip>true</gpg.skip>
-        <org.testcontainers.version>1.16.2</org.testcontainers.version>
-        <vs-commom-document-files.version>6.0.0</vs-commom-document-files.version>
+        <org.testcontainers.version>1.17.1</org.testcontainers.version>
+        <vs-commom-document-files.version>6.0.2</vs-commom-document-files.version>
         <!--
             M4 does not fail tests if beforeAll fails
             M5 fails in integration tests with a strange error
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.13.1</version>
+            <version>2.13.2</version>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
@@ -111,6 +111,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
+            <version>2.6.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -147,7 +148,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.1.0</version>
+            <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
         <!--Integration test dependencies-->
@@ -174,7 +175,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>test-db-builder-java</artifactId>
-            <version>3.2.2</version>
+            <version>3.3.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -193,7 +194,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>udf-debugging-java</artifactId>
-            <version>0.5.0</version>
+            <version>0.6.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -211,13 +212,13 @@
         <dependency>
             <artifactId>lombok</artifactId>
             <groupId>org.projectlombok</groupId>
-            <version>1.18.22</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.29</version>
+            <version>1.30</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -410,7 +411,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>1.3.4</version>
+                <version>2.3.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -418,22 +419,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <modules>
-                        <module>integration_tests</module>
-                        <module>jar_artifact</module>
-                        <module>udf_coverage</module>
-                        <module>lombok</module>
-                    </modules>
-                    <linkReplacements>
-                        <linkReplacement>
-                            https://awhitford.github.com/lombok.maven/lombok-maven-plugin/|http://anthonywhitford.com/lombok.maven/lombok-maven-plugin/
-                        </linkReplacement>
-                    </linkReplacements>
-                    <excludedFiles>
-                        <excludedFile>.github/workflows/release_droid_prepare_original_checksum.yml</excludedFile>
-                    </excludedFiles>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.exasol</groupId>
@@ -534,4 +519,10 @@
             </plugin>
         </plugins>
     </build>
+    <parent>
+        <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
+        <groupId>com.exasol</groupId>
+        <version>1.0.1</version>
+        <relativePath>pk_generated_parent.pom</relativePath>
+    </parent>
 </project>
