--- a/pom.xml
+++ b/pom.xml
@@ -153,21 +153,10 @@
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <configuration>
                     <excludeVulnerabilityIds>
-                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/sonatype-2020-0926
+                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/CVE-2020-8908 (fka. sonatype-2020-0926)
                         Excluded because we assume that the attacker does not have access to the machine. -->
-                        <exclude>sonatype-2020-0926</exclude>
-                        <!-- io.netty:netty-handler: https://ossindex.sonatype.org/vulnerability/sonatype-2020-0026
-                        Not a vulnerability in netty but how it is configured by the client software.amazon.awssdk:netty-nio-client,
-                        only used in tests. -->
-                        <exclude>sonatype-2020-0026</exclude>
-                        <!-- org.apache.hadoop:hadoop-common:jar:3.3.4 -->
-                        <!-- Rationale for exclusion: No update available, yet. -->
-                        <exclude>sonatype-2022-5732</exclude>
-                        <!-- com.fasterxml.jackson.core:jackson-core:jar:2.14.1
-                        We assume that only trusted input files are used. -->
-                        <exclude>sonatype-2022-6438</exclude>
-                        <!-- Transitive dependency fr.turri:aXMLRPC used by
-                        com.exasol:bucketfs-java.
+                        <exclude>CVE-2020-8908</exclude>
+                        <!-- Transitive dependency fr.turri:aXMLRPC used by com.exasol:bucketfs-java.
                         CVE-2020-36641 is reported to be fixed in aXMLRPC 1.12.1. We use version 1.13.0, so this is a false
                         positive. -->
                         <exclude>CVE-2020-36641</exclude>
