--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>google-cloud-storage</artifactId>
             <version>2.23.0</version>
         </dependency>
+        <dependency>
+            <!-- Upgrade transitive dependency of com.google.cloud:google-cloud-storage to fix CVE-2023-2976, CWE-552: Files or Directories Accessible to External Parties (7.1) -->
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.1-jre</version>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -152,9 +158,6 @@
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <configuration>
                     <excludeVulnerabilityIds>
-                        <!-- com.google.guava:guava: https://ossindex.sonatype.org/vulnerability/CVE-2020-8908 (fka. sonatype-2020-0926)
-                        Excluded because we assume that the attacker does not have access to the machine. -->
-                        <exclude>CVE-2020-8908</exclude>
                         <!-- Transitive dependency fr.turri:aXMLRPC used by com.exasol:bucketfs-java.
                         CVE-2020-36641 is reported to be fixed in aXMLRPC 1.12.1. We use version 1.13.0, so this is a false
                         positive. -->
