--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
     <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
-        <org.testcontainers.version>1.18.3</org.testcontainers.version>
-        <vs-common-document-files.version>7.3.3</vs-common-document-files.version>
+        <org.testcontainers.version>1.19.0</org.testcontainers.version>
+        <vs-common-document-files.version>7.3.4</vs-common-document-files.version>
     </properties>
     <profiles>
         <profile>
@@ -41,13 +41,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>2.23.0</version>
-        </dependency>
-        <dependency>
-            <!-- Upgrade transitive dependency of com.google.cloud:google-cloud-storage to fix CVE-2023-2976, CWE-552: Files or Directories Accessible to External Parties (7.1) -->
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>32.1.1-jre</version>
+            <version>2.27.1</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
@@ -66,19 +60,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.9.3</version>
+            <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.4.0</version>
+            <version>5.5.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.14.3</version>
+            <version>3.15.2</version>
             <scope>test</scope>
         </dependency>
         <!--Integration test dependencies-->
@@ -97,31 +91,31 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>test-db-builder-java</artifactId>
-            <version>3.4.2</version>
+            <version>3.5.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>udf-debugging-java</artifactId>
-            <version>0.6.9</version>
+            <version>0.6.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>hamcrest-resultset-matcher</artifactId>
-            <version>1.6.0</version>
+            <version>1.6.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-test-setup-abstraction-java</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>performance-test-recorder-java</artifactId>
-            <version>0.1.2</version>
+            <version>0.1.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -130,7 +124,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.9.7</version>
+                <version>2.9.12</version>
                 <executions>
                     <execution>
                         <goals>
@@ -162,6 +156,9 @@
                         CVE-2020-36641 is reported to be fixed in aXMLRPC 1.12.1. We use version 1.13.0, so this is a false
                         positive. -->
                         <exclude>CVE-2020-36641</exclude>
+                        <!-- Transitive dependency io.netty:netty-handler of software.amazon.awssdk:cloudformation.
+                        We assume that the AWS client's usage of `netty-handler` is not affected by the vulnerability. -->
+                        <exclude>CVE-2023-4586</exclude>
                     </excludeVulnerabilityIds>
                 </configuration>
             </plugin>
@@ -180,7 +177,7 @@
     <parent>
         <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.3.2</version>
+        <version>1.3.3</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
