--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -15,8 +15,7 @@ jobs:
         shell: bash
       }
     permissions: {
-      contents: read,
-      checks: write
+      contents: read
     }
     concurrency: {
       group: '${{ github.workflow }}-${{ github.ref }}-${{ matrix.exasol_db_version }}',
@@ -36,7 +35,7 @@ jobs:
     steps:
       - name: Free Disk Space
         id: free-disk-space
-        if: ${{ false }}
+        if: ${{ true }}
         run: |
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /usr/share/dotnet
